@@ -1,3 +1,6 @@
+2/6/09: Bug Fix: Fixed bug 2568528, which was caused by incorrect
+adjustment of attribute FILLER offset.  Reported by Andy Bontoft.
+
 ---------------- VERSION 3.0.1 --------------
 11/11/08: Bug Fix: Fixed crashing bug in ifind on FAT file system.  Bug: 2265927
 
